--- a/EventManagment.Blazor/wwwroot/index.html
+++ b/EventManagment.Blazor/wwwroot/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EventManagmentSolution.Blazor</title>
+    <title>EventManagment.Blazor</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="EventManagmentSolution.Blazor.styles.css" rel="stylesheet" />
+    <link href="EventManagment.Blazor.styles.css" rel="stylesheet" />
 </head>
 
 <body>
